force-app/main/default/objects/PrintHistory__c/PrintHistory__c.object-meta.xml
<CustomObject>
    <label>印刷履歴</label>
    <nameField>
        <displayFormat>PHT-{00000000}</displayFormat>
        <label>印刷履歴#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>