force-app/main/default/objects/PrintHistory__c/fields/DownloadDateTime__c.field-meta.xml
<CustomField>
    <fullName>DownloadDateTime__c</fullName>
    <label>ダウンロード日時</label>
    <type>DateTime</type>
</CustomField>