force-app/main/default/objects/PrintHistory__c/fields/OutputFileName_F__c.field-meta.xml
<CustomField>
    <fullName>OutputFileName_F__c</fullName>
    <formula>CASE(
  TableType__c, 
    &quot;Internal&quot; , &quot;配車課配車表&quot;, 
    &quot;ShippingInstruction&quot; , &quot;出荷指示書&quot;,
    &quot;ShippingCompany&quot;,&quot;配送依頼書&quot;,
    &quot;&quot;
)  +&apos;_&apos; + SUBSTITUTE(TEXT(TODAY()), &quot;-&quot;, &quot;&quot;) &amp;MID(TEXT(NOW()+ (9/24)), 12, 2) &amp;MID(TEXT(NOW() + (9/24)), 15, 2) &amp;MID(TEXT(NOW() + (9/24)), 18, 2)</formula>
    <label>帳票ファイル名</label>
    <type>Text</type>
</CustomField>