force-app/main/default/objects/PrintHistory__c/fields/Printed__c.field-meta.xml
<CustomField>
    <fullName>Printed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>帳票済</label>
    <type>Checkbox</type>
</CustomField>