force-app/main/default/objects/PrintHistory__c/fields/TableType__c.field-meta.xml
<CustomField>
    <fullName>TableType__c</fullName>
    <label>タイプ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
                <label>配車課配車表</label>
            </value>
            <value>
                <fullName>ShippingCompany</fullName>
                <label>配送依頼書</label>
            </value>
            <value>
                <fullName>ShippingInstruction</fullName>
                <label>出荷指示書</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>