force-app/main/default/objects/PrintHistory__c/fields/UnableToPrint__c.field-meta.xml
<CustomField>
    <fullName>UnableToPrint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>帳票不可</label>
    <type>Checkbox</type>
</CustomField>